<?xml version="1.0"?>
<package format="2">
  <name>vv_kuwamai_apps</name>
  <version>0.0.0</version>
  <description>The vv_kuwamai_apps package</description>

  <maintainer email="kuwagata@todo.todo">kuwagata</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
  </export>
</package>
