<?xml version="1.0"?>
<package format="2">
  <name>vv_kuwamai_bringup</name>
  <version>0.0.0</version>
  <description>The vv_kuwamai_bringup package</description>

  <maintainer email="kuwamai.beetle@gmail.com">kuwagata</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
